--- a/client/src/components/+account/account.module.scss
+++ b/client/src/components/+account/account.module.scss
@@ -1,6 +1,5 @@
 @import '~@nevermined-io/styles/lib/cjs/styles/index.scss';
 
-
 .account-modules {
   margin-top: 32px;
 
@@ -29,7 +28,7 @@
       right: 2px;
       top: -4px;
       font-size: 20px;
-      color: #132D43;
+      color: #132d43;
 
       &:hover {
         color: gc(pL);
@@ -47,10 +46,17 @@
     text-align: center;
     border-radius: 0px;
     padding: 32px 8px 32px 8px;
-    background: linear-gradient(180deg, #7834F9 21.35%, #60CCF0 100%);
+    background: linear-gradient(180deg, #7834f9 21.35%, #60ccf0 100%);
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+    &--subscription {
+      background: #13122b;
+    }
   }
 
-  &__card-icon{
+  &__card-icon {
     padding-top: 10px;
     padding-bottom: 20px;
   }
@@ -59,17 +65,16 @@
     margin-bottom: 32px;
   }
 
-
   &__asset-title {
     cursor: pointer;
     width: 50%;
     display: flex;
     align-items: center;
-    padding: 5px
+    padding: 5px;
   }
 
   &__asset-date {
-    padding-left: 1%
+    padding-left: 1%;
   }
 
   &__asset {
@@ -93,9 +98,7 @@
       display: flex;
       align-items: center;
       justify-items: start;
-
     }
-
   }
 
   &__info {
@@ -124,7 +127,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 16px;
-    max-width: calc(396px*2);
+    max-width: calc(396px * 2);
   }
 
   &__summary-number {
@@ -133,12 +136,19 @@
     font-weight: 400;
     line-height: 90px;
     letter-spacing: -0.03em;
-    text-align: left;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
   }
 
   &__summary-subscription {
     font-family: Titillium Web;
     line-height: 90px;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
   }
 
   &__card-name {
@@ -147,6 +157,6 @@
     font-weight: 400;
     line-height: 48px;
     letter-spacing: -0.04em;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 }
